Fix article margin issue on small screens

--- a/css/_base.scss
+++ b/css/_base.scss
@@ -152,9 +152,8 @@ p {
 }
 
 @media (max-width: 47.999em) {
-  article {
-    margin: 70px 0;
-    padding: 0;
+  body {
+    padding-top: 70px;
   }
 
   .arrow-left {
