--- a/css/_slider.scss
+++ b/css/_slider.scss
@@ -67,4 +67,7 @@
   .slider .slider__content .item {
     border: none;
   }
+  .slider-artc {
+    padding: 0;
+  }
 }
